run_outputs/py_compile_after_patch.txt
  File ".\canonical_train_2bANN2_HO.py", line 134
    rlo.write(f\"START: {start}\n\")
                ^
SyntaxError: unexpected character after line continuation character
